test/type_errors/cases/ppx_eta_error_nominal.ml
type err = Unavailable [@@deriving eta_error]
